# add109

db/: games.db
final/: test.css  test.html
final/notes_app/: .gitignore  Cargo.toml  notes.db
final/notes_app/src/: db.rs  error.rs  main.rs  models.rs  routes.rs
final/notes_app/static/: styles.css
final/notes_app/templates/: index.html.tera  login.html.tera  notes.html.tera  signup.html.tera
m2/: crit1.sql  crit10.sql  crit2.sql  crit3.sql  crit4  crit4.sql  crit5.sql  crit6.sql  crit7.sql  crit8.sql  crit9.sql  debug.sql  simple_debug.sql
sqltrain/Exercise Files/db/: test.db  world.db
